# OtusML_Inference

./: .gitignore  CMakeLists.txt  fashio_mnist.cpp  fashio_mnist.h
